# EdgeMqttDevX

./: .gitignore  CMakeLists.txt  README.md
include/: dx_azure_iot.h  dx_config.h  dx_device_twins.h  dx_gpio.h  dx_json_serializer.h  dx_mqtt.h  dx_openai.h  dx_timer.h  dx_utilities.h
src/: dx_azure_iot_stub.c  dx_gpio.c  dx_json_serializer.c  dx_mqtt.c  dx_openai.c  dx_terminate.c  dx_timer.c  dx_utilities.c  log.c
